--- a/index.html
+++ b/index.html
@@ -18,35 +18,39 @@
   </head>
   <body>
     <header class="header">
-      <nav class="nav">
-        <a href="./index.html" class="logo"
-          >Web<span class="logo-top">Studio</span></a
-        >
-        <ul class="header-list">
-          <li><a href="./index.html" class="link">Studio</a></li>
-          <li><a href="" class="link">Portfolio</a></li>
-          <li><a href="" class="link">Contacts</a></li>
-        </ul>
-      </nav>
+      <div class="header-container container">
+        <nav class="nav">
+          <a href="./index.html" class="logo"
+            >Web<span class="logo-top">Studio</span></a
+          >
+          <menu class="nav-list">
+            <li><a href="./index.html" class="link">Studio</a></li>
+            <li><a href="" class="link">Portfolio</a></li>
+            <li><a href="" class="link">Contacts</a></li>
+          </menu>
+        </nav>
 
-      <address class="address">
-        <ul class="address-list">
-          <li>
-            <a href="mailto:info@devstudio.com" class="link"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a href="tel:+110001111111" class="link">+11 (000) 111-11-11</a>
-          </li>
-        </ul>
-      </address>
+        <address class="address">
+          <ul class="address-list">
+            <li>
+              <a href="mailto:info@devstudio.com" class="link"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a href="tel:+110001111111" class="link">+11 (000) 111-11-11</a>
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
 
     <main>
       <section class="hero">
-        <h1 class="hero-header">Effective Solutions for Your Business</h1>
-        <button type="button" class="btn">Order Service</button>
+        <div class="container">
+          <h1 class="hero-header">Effective Solutions for Your Business</h1>
+          <button type="button" class="btn">Order Service</button>
+        </div>
       </section>
 
       <section class="benefits">
