--- a/index.html
+++ b/index.html
@@ -54,83 +54,95 @@
       </section>
 
       <section class="benefits">
-        <h2 class="hide">Benefits</h2>
-        <ul class="benefits-list">
-          <li>
-            <h3 class="section-subheader">Strategy</h3>
-            <p class="article">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li>
-            <h3 class="section-subheader">Punctuality</h3>
-            <p class="article">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li>
-            <h3 class="section-subheader">Diligence</h3>
-            <p class="article">
-              Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
-            </p>
-          </li>
-          <li>
-            <h3 class="section-subheader">Technologies</h3>
-            <p class="article">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
+        <div class="benefits-container container">
+          <h2 class="hide">Benefits</h2>
+          <ul class="benefits-list">
+            <li>
+              <h3 class="section-subheader">Strategy</h3>
+              <p class="article">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li>
+              <h3 class="section-subheader">Punctuality</h3>
+              <p class="article">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li>
+              <h3 class="section-subheader">Diligence</h3>
+              <p class="article">
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
+              </p>
+            </li>
+            <li>
+              <h3 class="section-subheader">Technologies</h3>
+              <p class="article">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <section class="our-team">
-        <h2 class="section-header">Our Team</h2>
-        <ul class="team-list">
-          <li class="card">
-            <img
-              src="./images/markguerrero.jpg"
-              alt="mark guerrero"
-              width="264"
-              height="260"
-            />
-            <h3 class="section-subheader">Mark Guerrero</h3>
-            <p class="article">Product Designer</p>
-          </li>
-          <li class="card">
-            <img
-              src="./images/tomford.jpg"
-              alt="tom ford"
-              width="264"
-              height="260"
-            />
-            <h3 class="section-subheader">Tom Ford</h3>
-            <p class="article">Frontend Developer</p>
-          </li>
-          <li class="card">
-            <img
-              src="./images/camilagarcia.jpg"
-              alt="camila garcia"
-              width="264"
-              height="260"
-            />
-            <h3 class="section-subheader">Camila Garcia</h3>
-            <p class="article">Marketing</p>
-          </li>
-          <li class="card">
-            <img
-              src="./images/danielwilson.jpg"
-              alt="daniel wilson"
-              width="264"
-              height="260"
-            />
-            <h3 class="section-subheader">Daniel Wilson</h3>
-            <p class="article">UI Designer</p>
-          </li>
-        </ul>
+        <div class="team-container container">
+          <h2 class="section-header">Our Team</h2>
+          <ul class="team-list">
+            <li class="team-card">
+              <img
+                src="./images/markguerrero.jpg"
+                alt="mark guerrero"
+                width="264"
+                height="260"
+              />
+              <div class="team-card-text">
+                <h3 class="section-subheader">Mark Guerrero</h3>
+                <p class="article">Product Designer</p>
+              </div>
+            </li>
+            <li class="team-card">
+              <img
+                src="./images/tomford.jpg"
+                alt="tom ford"
+                width="264"
+                height="260"
+              />
+              <div class="team-card-text">
+                <h3 class="section-subheader">Tom Ford</h3>
+                <p class="article">Frontend Developer</p>
+              </div>
+            </li>
+            <li class="team-card">
+              <img
+                src="./images/camilagarcia.jpg"
+                alt="camila garcia"
+                width="264"
+                height="260"
+              />
+              <div class="team-card-text">
+                <h3 class="section-subheader">Camila Garcia</h3>
+                <p class="article">Marketing</p>
+              </div>
+            </li>
+            <li class="team-card">
+              <img
+                src="./images/danielwilson.jpg"
+                alt="daniel wilson"
+                width="264"
+                height="260"
+              />
+              <div class="team-card-text">
+                <h3 class="section-subheader">Daniel Wilson</h3>
+                <p class="article">UI Designer</p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <section class="portfolio">
