--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
           <a href="./index.html" class="logo"
             >Web<span class="logo-top">Studio</span></a
           >
-          <menu class="nav-list">
+          <ul class="nav-list">
             <li><a href="./index.html" class="link">Studio</a></li>
             <li><a href="" class="link">Portfolio</a></li>
             <li><a href="" class="link">Contacts</a></li>
-          </menu>
+          </ul>
         </nav>
 
         <address class="address">
@@ -57,28 +57,28 @@
         <div class="benefits-container container">
           <h2 class="hide">Benefits</h2>
           <ul class="benefits-list">
-            <li>
+            <li class="benefits-card">
               <h3 class="section-subheader">Strategy</h3>
               <p class="article">
                 Our goal is to identify the business problem to walk away with
                 the perfect and creative solution.
               </p>
             </li>
-            <li>
+            <li class="benefits-card">
               <h3 class="section-subheader">Punctuality</h3>
               <p class="article">
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
               </p>
             </li>
-            <li>
+            <li class="benefits-card">
               <h3 class="section-subheader">Diligence</h3>
               <p class="article">
                 Research and confirm brands that present the strongest digital
                 growth opportunities and minimize risk.
               </p>
             </li>
-            <li>
+            <li class="benefits-card">
               <h3 class="section-subheader">Technologies</h3>
               <p class="article">
                 Design practice focused on digital experiences. We bring forth a
@@ -215,7 +215,7 @@
     </main>
 
     <footer class="footer">
-      <div class="footer-container container">
+    <div class="footer-container container">
       <a href="./index.html" class="logo"
         >Web<span class="logo-botton">Studio</span></a
       >
@@ -223,7 +223,7 @@
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
+    </div>
     </footer>
-  </div>
   </body>
 </html>
