--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         </div>
       </section>
 
-      <section class="benefits">
+      <section class="benefits visually-hidden">
         <div class="benefits-container container">
           <h2 class="hide">Benefits</h2>
           <ul class="benefits-list">
@@ -146,84 +146,97 @@
       </section>
 
       <section class="portfolio">
-        <div class="portfolio-container container class="portfolio-card"">
-        <h2 class="section-header">Our Portfolio</h2>
-        <ul class="portfolio-list">
-          <li class="portfolio-card">
-            <img
-              src="./images/banking-app.jpg"
-              alt="Banking App"
-              width="360"
-              height="300"
-            />
-            <div class="portfolio-card-text"><h3 class="section-subheader">Banking App</h3>
-            <p class="article">App</p></div>
-          </li>
-          <li class="portfolio-card">
-            <img
-              src="./images/cashless-payment.jpg"
-              alt="Cashless Payment"
-              width="360"
-              height="300"
-            />
-            <div class="portfolio-card-text"><h3 class="section-subheader">Cashless Payment</h3>
-            <p class="article">Marketing</p></div>
-          </li>
-          <li class="portfolio-card">
-            <img
-              src="./images/meditation-app.jpg"
-              alt="Meditation App"
-              width="360"
-              height="300"
-            />
-            <div class="portfolio-card-text"><h3 class="section-subheader">Meditation App</h3>
-            <p class="article">App</p></div>
-          </li>
-          <li class="portfolio-card">
-            <img
-              src="./images/taxi-service.jpg"
-              alt="Taxi Service" class="portfolio-card-text"
-              width="360"
-              height="300"
-            />
-            <div class="portfolio-card-text"><h3 class="section-subheader">Taxi Service</h3>
-            <p class="article">Marketing</p></div>
-          </li>
-          <li class="portfolio-card">
-            <img
-              src="./images/screen-illustrations.jpg"
-              alt="Screen Illustrations"
-              width="360"
-              height="300"
-            />
-            <div class="portfolio-card-text"><h3 class="section-subheader">Screen Illustrations</h3>
-            <p class="article">Design</p></div>
-          </li>
-          <li class="portfolio-card">
-            <img
-              src="./images/online-courses.jpg"
-              alt="Online Courses"
-              width="360"
-              height="300"
-            />
-            <div class="portfolio-card-text"><h3 class="section-subheader">Online Courses</h3>
-            <p class="article">Marketing</p></div>
-          </li>
-        </ul>
+        <div class="portfolio-container container">
+          <h2 class="section-header">Our Portfolio</h2>
+          <ul class="portfolio-list">
+            <li class="portfolio-card">
+              <img
+                src="./images/banking-app.jpg"
+                alt="Banking App"
+                width="360"
+                height="300"
+              />
+              <div class="portfolio-card-text">
+                <h3 class="section-subheader">Banking App</h3>
+                <p class="article">App</p>
+              </div>
+            </li>
+            <li class="portfolio-card">
+              <img
+                src="./images/cashless-payment.jpg"
+                alt="Cashless Payment"
+                width="360"
+                height="300"
+              />
+              <div class="portfolio-card-text">
+                <h3 class="section-subheader">Cashless Payment</h3>
+                <p class="article">Marketing</p>
+              </div>
+            </li>
+            <li class="portfolio-card">
+              <img
+                src="./images/meditation-app.jpg"
+                alt="Meditation App"
+                width="360"
+                height="300"
+              />
+              <div class="portfolio-card-text">
+                <h3 class="section-subheader">Meditation App</h3>
+                <p class="article">App</p>
+              </div>
+            </li>
+            <li class="portfolio-card">
+              <img
+                src="./images/taxi-service.jpg"
+                alt="Taxi Service"
+                class="portfolio-card-text"
+                width="360"
+                height="300"
+              />
+              <div class="portfolio-card-text">
+                <h3 class="section-subheader">Taxi Service</h3>
+                <p class="article">Marketing</p>
+              </div>
+            </li>
+            <li class="portfolio-card">
+              <img
+                src="./images/screen-illustrations.jpg"
+                alt="Screen Illustrations"
+                width="360"
+                height="300"
+              />
+              <div class="portfolio-card-text">
+                <h3 class="section-subheader">Screen Illustrations</h3>
+                <p class="article">Design</p>
+              </div>
+            </li>
+            <li class="portfolio-card">
+              <img
+                src="./images/online-courses.jpg"
+                alt="Online Courses"
+                width="360"
+                height="300"
+              />
+              <div class="portfolio-card-text">
+                <h3 class="section-subheader">Online Courses</h3>
+                <p class="article">Marketing</p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
-    </div>
     </main>
 
     <footer class="footer">
-    <div class="footer-container container">
-      <a href="./index.html" class="logo"
-        >Web<span class="logo-botton">Studio</span></a
-      >
-      <p class="article">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
-    </div>
+      <div class="footer-container container">
+        <a href="./index.html" class="logo"
+          >Web<span class="logo-botton">Studio</span></a
+        >
+        <p class="article">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
