--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         </div>
       </section>
 
-      <section class="benefits visually-hidden">
+      <section class="benefits">
         <div class="benefits-container container">
           <h2 class="hide">Benefits</h2>
           <ul class="benefits-list">
@@ -90,7 +90,7 @@
       </section>
 
       <section class="our-team">
-        <div class="team-container container">
+        <div class="team-container">
           <h2 class="section-header">Our Team</h2>
           <ul class="team-list">
             <li class="team-card">
