--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </head>
   <body>
     <header class="header">
-      <div class="header-container container">
+      <div class="header-container">
         <nav class="nav">
           <a href="./index.html" class="logo"
             >Web<span class="logo-top">Studio</span></a
@@ -90,7 +90,7 @@
       </section>
 
       <section class="our-team">
-        <div class="team-container">
+        <div class="team-container container">
           <h2 class="section-header">Our Team</h2>
           <ul class="team-list">
             <li class="team-card">
