--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </head>
   <body>
     <header class="header">
-      <div class="header-container">
+      <div class="header-container container">
         <nav class="nav">
           <a href="./index.html" class="logo"
             >Web<span class="logo-top">Studio</span></a
