--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       </section>
 
       <section class="our-team">
-        <div class="team-container container">
+        <div class="container team-container">
           <h2 class="section-header">Our Team</h2>
           <ul class="team-list">
             <li class="team-card">
